--- a/3.html
+++ b/3.html
@@ -7,41 +7,48 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="block block1">
-        <h2 class="x">Як справи?</h2>
+    <header>
+        <h2>Як справи?</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus dolore ad vitae deserunt quos inventore est mollitia, non earum alias dicta, laudantium eius beatae fugit amet animi repellendus aspernatur?</p>
+        <p>1</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li>
+                <a href="1.html">Перша сторінка</a>
+            </li>
+
+            <li>
+                <a href="2.html">Друга сторінка</a>
+            </li>
+           
+            <li>
+                <a href="4.html">Четверта сторінка</a>
+            </li>
+
+            <li>
+                <a href="5.html">П'ята сторінка</a>
+            </li>
+        </ul>
+    </nav>
+    
+    <div class="content">
+        <p>Lorem ipsum dolor, sit amet consectetur adip Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, delectus, voluptate dolorum molestiae consequuntur neque libero, excepturi nihil voluptatum atque alias reprehenderit recusandae explicabo? Possimus voluptatum at similique eaque provident!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, provident. Ratione ipsa dicta blanditiis aut corporis neque odit harum sit ab ea? Ab quod delectus animi? Animi est quisquam maiores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo hic aliquid magni architecto quis odio nisi voluptatem mollitia voluptatibus, quod assumenda doloribus cum ipsam laudantium vitae facere, porro, modi explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci impedit nobis, rerum dolore quos eligendi itaque fuga debitis consequatur omnis minima ut excepturi ipsum dignissimos perspiciatis deleniti molestias voluptas rem! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla quisquam obcaecati magnam debitis velit alias, molestiae, est sed facilis, quidem optio nisi a excepturi libero quis repudiandae reiciendis! Facilis, consectetur.L Lo elit. Laudantium, assumenda velit! Autem quas odio accusantium harum non cupiditate ducimus fugit ratione, suscipit distinctio? Veniam, et minima sed nisi molestias reiciendis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, totam molestiae odit soluta beatae, suscipit quisquam rem in cupiditate unde commodi amet vitae natus delectus excepturi! Porro, aliquid doloribus. Quisquam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores error maiores ipsam nemo, a non laborum illum iure harum vel exercitationem provident animi velit, quasi eaque molestiae laboriosam natus minima. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae beatae voluptatum corrupti autem provident! Illo aperiam facilis alias ullam saepe amet velit eius deserunt tempore ratione? Sint reiciendis harum repellendus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quae magnam, consectetur aperiam quaerat tenetur. Nam assumenda voluptate voluptates nesciunt totam, magni repellendus dolor, minima laborum velit sequi nihil laudantium! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore aut dolor reprehenderit exercitationem doloribus eius esse! Possimus ab aspernatur dignissimos deserunt, maiores itaque obcaecati? Recusandae, nulla? Illum id voluptatum illo! Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vero odit in atque ad corrupti! Sit nostrum voluptatem facilis natus temporibus, iste dolore ducimus rem nobis enim id modi veritatis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse voluptas blanditiis optio adipisci libero porro laudantium consequatur. Sint rerum dolor ex facilis ea possimus voluptatibus pariatur excepturi? Aspernatur, non quidem? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum qui molestiae dolores. Neque, id, repellendus deleniti, atque non ea ab cupiditate iure soluta quibusdam totam natus ratione dicta? Perspiciatis, reiciendis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam tempore quia deleniti dolores sint repellendus explicabo numquam impedit, autem provident! Doloribus q Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt temporibus, consequuntur enim voluptas quae ducimus? Ut, in? Harum animi aliquam tenetur, reprehenderit molestiae perspiciatis ad, itaque amet provident quis recusandae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima est ex harum, perspiciatis fugiat tempore architecto repudiandae rerum laboriosam deleniti corrupti voluptatibus impedit nobis, mollitia molestiae odit iusto dolore inventore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ratione eligendi deleniti incidunt earum aliquid? Quas iusto inventore suscipit doloribus, soluta odit rerum possimus modi? Aliquid magni similique atque tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nobis temporibus eligendi, eaque deserunt iusto! Sapiente dolore commodi architecto error, libero dolores, laudantium quae quo reprehenderit corporis obcaecati accusantium quasi.uis repudiandae veniam eligendi assumenda cumque ipsam quod fugiat.</p>
     </div>
 
-    <div class="main_container">
-        <div class="block block2">
-            <img src="numbers.png" alt="" height="150px" usemap="#workmap">
+    <aside>
+        <p>4</p>
+    </aside>
 
-            <map name="workmap">
-                <area shape="rect" coords="10,10,115,150" href="index.html" alt="">
-                <area shape="rect" coords="120,10,225,150" href="2.html" alt="">
-            </map>
-        </div>
-
-        <div class="block block3">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eveniet ratione consequuntur mollitia tempore asperiores earum, sunt quasi blanditiis deleniti aperiam est laboriosam porro, obcaecati repellendus eum explicabo eius. Libero? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet voluptas, hic sequi debitis quisquam nulla quod aut. Ducimus quidem est incidunt voluptate nam deserunt ut, porro natus libero quasi amet! loLorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus dolore ad vitae deserunt quos inventore est mollitia, non earum alias dicta, laudantium eius beatae fugit amet animi repellendus aspernatur?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eveniet ratione consequuntur mollitia tempore asperiores earum, sunt quasi blanditiis deleniti aperiam est laboriosam porro, obcaecati repellendus eum explicabo eius. Libero? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet voluptas, hic sequi debitis quisquam nulla quod aut. Ducimus quidem est incidunt voluptate nam deserunt ut, porro natus libero quasi amet! loLorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus dolore ad vitae deserunt quos inventore est mollitia, non earum alias dicta, laudantium eius beatae fugit amet animi repellendus aspernatur?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eveniet ratione consequuntur mollitia tempore asperiores earum, sunt quasi blanditiis deleniti aperiam est laboriosam porro, obcaecati repellendus eum explicabo eius. Libero? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet voluptas, hic sequi debitis quisquam nulla quod aut. Ducimus quidem est incidunt voluptate nam deserunt ut, porro natus libero quasi amet! loLorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus dolore ad vitae deserunt quos inventore est mollitia, non earum alias dicta, laudantium eius beatae fugit amet animi repellendus aspernatur?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eveniet ratione consequuntur mollitia tempore asperiores earum, sunt quasi blanditiis deleniti aperiam est laboriosam porro, obcaecati repellendus eum explicabo eius. Libero? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet voluptas, hic sequi debitis quisquam nulla quod aut. Ducimus quidem est incidunt voluptate nam deserunt ut, porro natus libero quasi amet! loLorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus dolore ad vitae deserunt quos inventore est mollitia, non earum alias dicta, laudantium eius beatae fugit amet animi repellendus aspernatur?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae excepturi, iure nobis veritatis id, delectus culpa repellat sit earum natus totam fugiat distinctio praesentium doloribus explicabo? Doloremque voluptatum commodi similique.</p>
-        </div>
-
-        <div class="block block4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste accusamus, quos repellat ipsa corporis odit. Ut, eveniet. Minus quaerat aspernatur eveniet, possimus pariatur quae voluptatum adipisci, et in nostrum est.</p>
-        </div>
-
-        <div class="block block5">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis doloremque quia laborum quam. Accusamus incidunt obcaecati, eum, minima fugiat pariatur cum, quisquam dolores vitae cumque tempore nulla dolorem veritatis quod.</p>
-        </div>
+    <div class="info">
+        <h2>5</h2>
     </div>
 
-    <div class="block block6">
-        <div class="y">
-            <h3>А у мене не дуже :)</h3>
-        </div>
+    <footer>
+        <h2>В мене не дуже :)</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis at deserunt nesciunt, deleniti fugit eum ab ducimus soluta asperiores voluptatum illum magni quas animi tempore dolorem aperiam. Quod, rerum voluptate!</p>
-    </div>
+        <p>6</p>
+    </footer>
 </body>
 </html>
