--- a/2.html
+++ b/2.html
@@ -7,39 +7,48 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="block block1">
-        <h2 class="x">Як справи?</h2>
+    <header>
+        <h2>Як справи?</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus dolore ad vitae deserunt quos inventore est mollitia, non earum alias dicta, laudantium eius beatae fugit amet animi repellendus aspernatur?</p>
+        <p>1</p>
+    </header>
+
+    <nav>
+        <ol>
+            <li>
+                <a href="1.html">Перша сторінка</a>
+            </li>
+
+            <li>
+                <a href="3.html">Третя сторінка</a>
+            </li>
+
+            <li>
+                <a href="4.html">Четверта сторінка</a>
+            </li>
+
+            <li>
+                <a href="5.html">П'ята сторінка</a>
+            </li>
+        </ul>
+    </nav>
+    
+    <div class="content">
+        <p>3</p>
     </div>
 
-    <div class="main_container">
-        <div class="block block2">
-            <ol>
-                <li><a href="index.html">Перша сторінка</a></li>
-                <li><a href="3.html">Третя сторінка</a></li>
-            </ol>
-        </div>
+    <aside>
+        <p>4</p>
+    </aside>
 
-        <div class="block block3">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae excepturi, iure nobis veritatis id, delectus culpa repellat sit earum natus totam fugiat distinctio praesentium doloribus explicabo? Doloremque voluptatum commodi similique.</p>
-        </div>
-
-        <div class="block block4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste accusamus, quos repellat ipsa corporis odit. Ut, eveniet. Minus quaerat aspernatur eveniet, possimus pariatur quae voluptatum adipisci, et in nostrum est.</p>
-        </div>
-
-        <div class="block block5">
-            <p>Lorem iLorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eveniet ratione consequuntur mollitia tempore asperiores earum, sunt quasi blanditiis deleniti aperiam est laboriosam porro, obcaecati repellendus eum explicabo eius. Libero? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet voluptas, hic sequi debitis quisquam nulla quod aut. Ducimus quidem est incidunt voluptate nam deserunt ut, porro natus libero quasi amet! loLorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus dolore ad vitae deserunt quos inventore est mollitia, non earum alias dicta, laudantium eius beatae fugit amet animi repellendus aspernatur?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eveniet ratione consequuntur mollitia tempore asperiores earum, sunt quasi blanditiis deleniti aperiam est laboriosam porro, obcaecati repellendus eum explicabo eius. Libero? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet voluptas, hic sequi debitis quisquam nulla quod aut. Ducimus quidem est incidunt voluptate nam deserunt ut, porro natus libero quasi amet! loLorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus dolore ad vitae deserunt quos inventore est mollitia, non earum alias dicta, laudantium eius beatae fugit amet animi repellendus aspernatur?psum dolor sit amet consectetur adipisicing elit. Omnis doloremque quia laborum quam. Accusamus incidunt obcaecati, eum, minima fugiat pariatur cum, quisquam dolores vitae cumque tempore nulla dolorem veritatis quod.</p>
-        </div>
+    <div class="info">
+        <h2>5</h2>
     </div>
 
-    <div class="block block6">
-        <div class="y">
-            <h3>А у мене не дуже :)</h3>
-        </div>
+    <footer>
+        <h2>В мене не дуже :)</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis at deserunt nesciunt, deleniti fugit eum ab ducimus soluta asperiores voluptatum illum magni quas animi tempore dolorem aperiam. Quod, rerum voluptate!</p>
-    </div>
+        <p>6</p>
+    </footer>
 </body>
 </html>
