--- a/3.html
+++ b/3.html
@@ -16,7 +16,7 @@
     <nav>
         <ul>
             <li>
-                <a href="1.html">Перша сторінка</a>
+                <a href="index.html">Перша сторінка</a>
             </li>
 
             <li>
