--- a/5.html
+++ b/5.html
@@ -16,7 +16,7 @@
     <nav>
         <img src="numbers.png" alt="" usemap="#map-example" width="120px">
         <map name="map-example">
-            <area shape="" coords="0,0,30,30" href="1.html" alt="">
+            <area shape="" coords="0,0,30,30" href="index.html" alt="">
             <area shape="" coords="30,0,60,30" href="2.html" alt="">
             <area shape="" coords="60,0,90,30" href="3.html" alt="">
             <area shape="" coords="90,0,120,30" href="4.html" alt="">
